--- a/index.html
+++ b/index.html
@@ -46,10 +46,17 @@
         </nav>
     </header>
 
-    <main class="vh-100 d-flex flex-row">
-        <aside class="my_aside h-100"></aside>
-        <header class="my_header-height w-100 my-bg-lightgray">
-        </header>
+    <main class="d-flex flex-row">
+        <aside class="my_height border-test my_dark-blue">
 
+        </aside>
+        <header class="my_height w-100 my-bg-lightgray">
+        </header>
     </main>
+
+    
+    <aside>
+
+    </aside>
+
 </body>
