edit main container

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         </nav>
     </header>
 
-    <main class="d-flex flex-row">
-        <aside class="my_height border-test my_dark-blue">
+    <main class="d-flex flex-row my_main-height">
+        <aside class="h-100 custom-width border-test my_dark-blue">
 
         </aside>
-        <header class="my_height w-100 my-bg-lightgray">
+        <header class="h-100 my-bg-lightgray">
         </header>
     </main>
 
