--- a/index.html
+++ b/index.html
@@ -27,31 +27,36 @@
 
 <body>
     <header>
-        <nav class="navbar d-flex justify-content-around bg-body-tertiary">
-            <div class="container-fluid d-flex justify-content-start">
-                <a class="navbar-brand">
+        <nav class="navbar py-3 d-flex justify-content-around bg-body-tertiary">
+            <div class="container-fluid pe-0 d-flex justify-content-center">
+                <a class="navbar-brand pe-4">
                     <img src="./img/logo.svg" alt="Booolean Logo Vector">
                 </a>
-                <form class="d-flex w-75" role="search">
-                    <input class="form-control justify-content-start me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                <form class="d-flex my-form_width" role="search">
+                    <input class="form-control bg-secondary-subtle justify-content-start py-2 me-2" type="search"  placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search"></input>
                 </form>
-                    <div class="m-3">
-                        <a class="p-2" href="">btn</a>
-                        <a href="">btn</a>
-                        <a href="">btn</a>
-                        <a href="">btn</a>
+                    <div class="d-flex justify-content-around my_btn-width">
+                        <a class="p-2 ps-4 text-secondary" href="#"><i class="fa-solid fa-list"></i></a>
+                        <a class="p-2 text-secondary" href="#"><i class="fa-solid fa-circle-question"></i></a>
+                        <a class="p-2 text-secondary" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                        <a class="p-2 text-warning" href="#"><i class="fa-solid fa-bell"></i></a>
                     </div>
             </div>
         </nav>
     </header>
 
     <main class="d-flex flex-row my_main-height">
-        <aside class="h-100 custom-width border-test my_dark-blue">
+        <aside class="h-100 custom-width my_dark-blue">
 
         </aside>
         <header class="h-100 my-bg-lightgray">
+            <div class="main_header-height main_header-width my_light-blue-bg">
+
+            </div>
         </header>
+        <div class="main-content border-test">
+
+        </div>
     </main>
 
     
