--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- FONTAWESOME CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Bootstrap Dashboard</title>
 </head>
 
@@ -30,28 +30,43 @@
         <nav class="navbar py-3 d-flex justify-content-around bg-body-tertiary">
             <div class="container-fluid pe-0 d-flex justify-content-center">
                 <a class="navbar-brand pe-4">
-                    <img src="./img/logo.svg" alt="Booolean Logo Vector">
+                    <img class="d-lg-block d-md-none" src="./img/logo.svg" alt="Booolean Logo Vector">
+                    <img class="my_logo-size d-lg-none d-md-flex" src="./img/mobile-logo.png" alt="Boolean Logo Mobile Vector">
                 </a>
                 <form class="d-flex my-form_width" role="search">
                     <input class="form-control bg-secondary-subtle justify-content-start py-2 me-2" type="search"  placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search"></input>
                 </form>
                     <div class="d-flex justify-content-around my_btn-width">
-                        <a class="p-2 ps-4 text-secondary" href="#"><i class="fa-solid fa-list"></i></a>
-                        <a class="p-2 text-secondary" href="#"><i class="fa-solid fa-circle-question"></i></a>
-                        <a class="p-2 text-secondary" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
-                        <a class="p-2 text-warning" href="#"><i class="fa-solid fa-bell"></i></a>
+                        <a class="d-xl-inline-flex d-lg-block d-md-none p-2 ps-4 text-secondary" href="#"><i class="fa-solid fa-list"></i></a>
+                        <a class="d-xl-inline-flex d-lg-block d-md-none p-2 text-secondary" href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                        <a class="d-xl-inline-flex d-lg-block d-md-block p-2 text-warning" href="#"><i class="fa-solid fa-bell"></i></a>
                     </div>
             </div>
         </nav>
     </header>
 
     <main class="d-flex flex-row my_main-height">
-        <aside class="h-100 custom-width my_dark-blue">
+        <aside class="h-100 d-flex align-content-between custom-width my_dark-blue">
+            <div class="d-flex text-start flex-column pe-4">
+                <ul class="pt-4">
+                    <li class="py-2">
+                        <a class="fs-4 text-decoration-none text-white" href="#"><i class="fa-solid fa-house fs-4 me-4"></i>Home</a>
+                    </li>
+                    <li class="py-2">
+                        <a class="fs-4 text-decoration-none text-white" href="#"><i class="fa-solid fa-chart-simple fs-4 me-4"></i>Stats</a>
+                    </li>
+                    <li class="py-2">
+                        <a class="fs-4 text-decoration-none text-white" href="#"><i class="fa-solid fa-signal fs-5 me-4"></i>Signals</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="pe-4">
+            </div>
 
+        <!-- ASIDE SECTION -->
         </aside>
         <header class="h-100 my-bg-lightgray">
             <div class="main_header-height main_header-width my_light-blue-bg">
-
             </div>
         </header>
         <div class="main-content border-test">
