fix main container

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 <div class="d-flex justify-content-around my_btn-width">
                     <a class="d-xl-inline-flex d-lg-block d-md-none p-2 ps-4 text-secondary" href="#"><i
                             class="fa-solid fa-list"></i></a>
+                    <a class="d-xl-inline-flex d-lg-block d-md-none p-2 ps-2 text-secondary" href="#"><i
+                            class="fa-solid fa-circle-question"></i></a>
                     <a class="d-xl-inline-flex d-lg-block d-md-none p-2 text-secondary" href="#"><i
                             class="fa-solid fa-ellipsis-vertical"></i></a>
                     <a class="d-xl-inline-flex d-lg-block d-md-block p-2 text-warning" href="#"><i
@@ -49,50 +51,48 @@
             </div>
         </nav>
     </header>
-
-    <main class="d-flex flex-row my_main-height">
+    <section class="d-flex">
         <!-- ASIDE SECTION -->
-        <section class="d-flex">
-            <aside class="h-100 d-flex align-content-between custom-width my_dark-blue">
-                <div class="d-flex w-100 text-start flex-column pe-4">
-                    <ul class="pt-4">
-                        <li class="py-2">
-                            <a class="fs-4 text-decoration-none text-white" href="#"><i
-                                    class="fa-solid fa-house fs-4 me-4"></i>Home</a>
-                        </li>
-                        <li class="py-2">
-                            <a class="fs-4 text-decoration-none text-white" href="#"><i
-                                    class="fa-solid fa-chart-simple fs-4 me-4"></i>Stats</a>
-                        </li>
-                        <li class="py-2">
-                            <a class="fs-4 text-decoration-none text-white" href="#"><i
-                                    class="fa-solid fa-signal fs-5 me-4"></i>Signals</a>
-                        </li>
-                        <li class="admin-item py-2">
-                            <a class="fs-4 text-decoration-none text-white" href="#"><i
-                                    class="fa-solid fa-gear fs-5 me-4"></i>Admin</a>
-                        </li>
-
-                    </ul>
-                </div>
-        </section>
+        <aside class="my_aside-height d-flex align-content-between position-absolute custom-width my_dark-blue">
+            <div class="d-flex w-100 text-start flex-column pe-4">
+                <ul class="pt-4">
+                    <li class="py-2">
+                        <a class="fs-6 text-decoration-none text-white" href="#"><i
+                                class="fa-solid fa-house fs-5 me-4"></i>Home</a>
+                    </li>
+                    <li class="py-2">
+                        <a class="fs-6 text-decoration-none text-white" href="#"><i
+                                class="fa-solid fa-chart-simple fs-5 me-4"></i>Stats</a>
+                    </li>
+                    <li class="py-2">
+                        <a class="fs-6 text-decoration-none text-white" href="#"><i
+                                class="fa-solid fa-signal fs-6 me-4"></i>Signals</a>
+                    </li>
+                    <li class="position-absolute bottom-0 mb-5">
+                        <a class="fs-6 text-decoration-none text-white" href="#"><i
+                                class="fa-solid fa-gear fs-5 me-4"></i>Admin</a>
+                    </li>
+                </ul>
+            </div>
+    </section>
         </aside>
-        <header class="h-100 my-bg-lightgray">
-            <div class="main_header-height main_header-width my_light-blue-bg">
+
+        <header class="my_margin-left main_header-height  main_header-width d-flex flex-column">
+            <div class="main_header-width my_light-blue-bg">
                 <div class="row px-2 py-3 text-white fw-">
                     <div class="col-6 fs-2">
                         <h1 class="d-inline-block mb-0">Boolean</h1>
-                        <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6 "
+                        <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6"
                             href="#">Piano blaze</a>
                         <div>
-                            <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6 "
+                            <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6"
                                 href="#">3 app</a>
                             <i class="fa-solid fa-angles-right text-white fs-5"></i>
-                            <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6 "
+                            <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6"
                                 href="#">Boolean mobile app</a>
-                            <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6 "
+                            <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6"
                                 href="#">Boolean web app</a>
-                            <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6 "
+                            <a class="text-white text-decoration-none custom_badge-bg px-2 py-1 me-1 rounded-pill fs-6"
                                 href="#">Boolean blog app</a>
                         </div>
                     </div>
@@ -103,15 +103,14 @@
                         </div>
                     </div>
                     <div class="col-3 ps-5">
-                        <h5 class="ps-5" >Nuovo Studente<i class="fa-solid fa-plus p-2 ms-4 rounded border-white border border-info"></i></h5>                    </h5>
+                        <h5 class="ps-5">Nuovo Studente<i class="fa-solid fa-plus p-2 ms-4 rounded border-white border border-info"></i>
                     </div>
-
-                </div>
-            </div>
         </header>
-        <div class="main-content border-test">
 
-        </div>
+    <!-- MAIN SECTTION -->
+    <main class="d-flex my-bg-lightgray flex-row flex-wrap my_main-width my_main-height">
+
+
     </main>
 
 
